Fix transport not starting + add version number
- Added transport.running = true when play/loop buttons pressed
- Transport must be explicitly started for RNBO playback
- Added version number (v1.3) to header for cache busting
- Enhanced logging for transport state debugging

--- a/GlowstateTest1.1/index.html
+++ b/GlowstateTest1.1/index.html
@@ -35,6 +35,7 @@
                     <span class="pulse-dot"></span>
                     <span class="status-text">LIVE</span>
                 </div>
+                <span class="build-number">v1.3</span>
             </div>
         </header>
 
